--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <span class="text-primary">Araujo</span>
                     </h1>
                     <div class="mb-3">
-                        <b>CoFounder of PMA - Experienced IT Technician - Full Stack Software Developer</b>
+                        <b>Cofounder of PMA - Experienced IT Technician - Full Stack Software Developer</b>
                     </div>
                     <div class="mb-4">
                         Mississauga, ON · (647) 863-3036
